package local.sop.sopinfo.apprentice.application.api.dto;

import java.util.UUID;

public record CreatedApprenticeResponse (UUID apprenticeId) {}
